[project]
name = "ai-articles-services"
version = "0.1.1"
description = "articles services"
requires-python = ">=3.12"

dependencies = [
    "anthropic[vertex]>=0.39.0",
    "openai>=1.54.5",
]

readme = "README.md"

[tool.pdm]
distribution = false
[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-env>=1.1.3",
]


[tool.pdm.dev-dependencies]
dev = ["commitizen>=3.13.0", "poethepoet>=0.24.4"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch$prerelease"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = ["pyproject.toml:(?i)version", "README.md:(?i)version"]
bump_message = "chore(bump): $current_version → $new_version [skip-ci]"

# https://github.com/nat-n/poethepoet
[tool.poe]
include = "poe.toml"
